--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </label>
   </div>
 
-  <button id="addPnjBtn" style="position: absolute; top: 10px; right: 10px; z-index: 100; padding: 8px 12px; background: #666; color: white; border: none; border-radius: 4px; cursor: pointer;">+ Ajouter un PNJ</button>
+  <!--<button id="addPnjBtn" style="position: absolute; top: 10px; right: 10px; z-index: 100; padding: 8px 12px; background: #666; color: white; border: none; border-radius: 4px; cursor: pointer;">+ Ajouter un PNJ</button>
   <div id="pnjForm" style="display:none; position:absolute; top:60px; right:10px; z-index:101; background:#333; color:white; padding:12px; border-radius:6px; border:1px solid #888;">
     <label>Nom : <input type="text" id="pnjName" /></label><br>
     <label>Faction :
@@ -59,7 +59,7 @@
     <label>Coterie : <input type="text" id="pnjCoterie" /></label><br>
     <label>Majeur ? <input type="checkbox" id="pnjMajor" /></label><br>
     <button id="submitPnj" style="margin-top:6px;">Ajouter</button>
-  </div>
+  </div>-->
 
   <div class="tooltip" id="tooltip"></div>
   <svg id="carte"></svg>
